test/analyze/type_check/assignment/indexed_assign.exp
Error: Invalid left hand side of assignment. Tuples are immutable and cannot have their elements reassigned.
test/analyze/type_check/assignment/indexed_assign.myte:11:2-6
 11 |   x[0] = 2;
    |   ^^^^

Error: Invalid left hand side of assignment. Tuples are immutable and cannot have their elements reassigned.
test/analyze/type_check/assignment/indexed_assign.myte:12:2-6
 12 |   x[1] = 2;
    |   ^^^^

Error: Invalid left hand side of assignment. Tuples are immutable and cannot have their elements reassigned.
test/analyze/type_check/assignment/indexed_assign.myte:17:2-6
 17 |   y[0] = 2;
    |   ^^^^

Error: Invalid left hand side of assignment. Tuples are immutable and cannot have their elements reassigned.
test/analyze/type_check/assignment/indexed_assign.myte:18:2-6
 18 |   y[1] = 2;
    |   ^^^^

Error: Expected type `Bool` but found `Int`
test/analyze/type_check/assignment/indexed_assign.myte:24:9
 24 |   x[0] = 1;
    |          ^